--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "no-console": ["warn", { "allow": ["warn", "error"] }],
     "indent": ["error", 2],
     "semi": ["error", "never"],
+    "object-curly-spacing": ["error", "always"],
     "import/order": ["error", {
       "groups": ["builtin", "external", "internal"],
       "pathGroups": [
