--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
     "@clerk/themes": "^2.1.21",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.5.2",
+    "@liveblocks/node": "^2.5.2",
+    "@liveblocks/react": "^2.5.2",
+    "@liveblocks/react-lexical": "^2.5.2",
+    "@liveblocks/react-ui": "^2.5.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.428.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
