--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@liveblocks/react": "^2.5.2",
     "@liveblocks/react-lexical": "^2.5.2",
     "@liveblocks/react-ui": "^2.5.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lexical": "^0.16.1",
